syntax = "proto3";
package DomainServices.CustomerService;
option csharp_namespace = "DomainServices.CustomerService.Contracts";

import "google/protobuf/wrappers.proto";

message ValidateContactRequest {
    ContactType ContactType = 1;
	string Contact = 2;
}

message ValidateContactResponse {
    ContactType ContactType = 1;
    bool IsContactValid = 2;
    google.protobuf.BoolValue IsMobile = 3;
}

enum ContactType {
	Unknown = 0;
	Phone = 1;
	Email = 2;
}